default/objects/pq_CRUSH_Plan_Overview__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>CRUSH Plan Overviews</relationshipLabel>
    <relationshipName>CRUSH_Plan_Overviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>