default/objects/pq_CRUSH_Plan_Overview__c/fields/Data_Key__c.field-meta.xml
<CustomField>
    <fullName>Data_Key__c</fullName>
    <description>Add a key to distinguish data between components added to the same Account Plan</description>
    <inlineHelpText>Add a key to distinguish data between components added to the same Account Plan</inlineHelpText>
    <label>Data Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>