default/objects/pq_CRUSH_Plan_Overview__c/validationRules/Cant_Edit_Title.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Edit_Title</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( Checkbox__c = TRUE ,
    ISCHANGED( Title__c ))</errorConditionFormula>
    <errorMessage>Cant Edit Title</errorMessage>
</ValidationRule>